Make Images Local, Cleaned URL Code

--- a/ocmaker/index.html
+++ b/ocmaker/index.html
@@ -9,7 +9,7 @@
 
 <body>
     <h1>World Trigger Character</h1>
-    <a href="OcEmblemTemplate.png" download="Oc Emblem Template.png">Download Emblem Template</a>
+    <a href="images/OcEmblemTemplate.png" download="Oc Emblem Template.png">Download Emblem Template</a>
     <br />
     <br />
     <div id="form">
@@ -752,6 +752,7 @@
     </div>
     <br />
     <button onclick="draw()">Draw Image</button>
+    <button onclick="saveImage()">Save</button>
     <!--0-25 is regular 3-6 Atacker 7-10 Shooter 11-13 Sniper 14-18 Attachments 19-25 Extras 26-32 Assault Rifles 33-39 Grenade Launchers 40-46 Shotguns 47-53 Handguns-->
     <canvas width="1280px" height="590px" style="border:2px solid black;" id="cv"></canvas>
     <script src="ocscripts.js"></script>
