--- a/ocmaker/index.html
+++ b/ocmaker/index.html
@@ -4,7 +4,7 @@
 <head>
     <title>World Trigger OC Template</title>
     <link rel="shortcut icon" type="image/x-icon" href="../favicon.ico">
-    <link rel="stylesheet" href="ocstyles.css">
+    <link rel="stylesheet preload" href="ocstyles.css">
 </head>
 
 <body>
@@ -141,7 +141,7 @@
             </tr>
             <tr>
                 <td>
-                    <select id="main1">
+                    <select id="sub1">
                         <option value="0">Free Trigger</option>
                         <option value="1">Shield</option>
                         <option value="2">Bagworm</option>
@@ -211,7 +211,7 @@
                     </select>
                 </td>
                 <td>
-                    <select id="sub1">
+                    <select id="main1">
                         <option value="0">Free Trigger</option>
                         <option value="1">Shield</option>
                         <option value="2">Bagworm</option>
@@ -281,75 +281,6 @@
                 </td>
             </tr>
             <tr>
-                <td>
-                    <select id="main2">
-                        <option value="0">Free Trigger</option>
-                        <option value="1">Shield</option>
-                        <option value="2">Bagworm</option>
-                        <option value="3">Raygust</option>
-                        <option value="4">Kogetsu</option>
-                        <option value="5">Scorpion</option>
-                        <option value="6">Kogetsu: Spear</option>
-                        <option value="7">Asteroid</option>
-                        <option value="8">Hound</option>
-                        <option value="9">Meteora</option>
-                        <option value="10">Viper</option>
-                        <option value="11">Egret</option>
-                        <option value="12">Ibis</option>
-                        <option value="13">Lightning</option>
-                        <option value="14">Gen'Yo</option>
-                        <option value="15">Lead Bullet</option>
-                        <option value="16">Senku</option>
-                        <option value="17">Starmaker</option>
-                        <option value="18">Thruster</option>
-                        <option value="19">Escudo</option>
-                        <option value="20">Chameleon</option>
-                        <option value="21">Dummy Beacon</option>
-                        <option value="22">Grasshopper</option>
-                        <option value="23">Silencer</option>
-                        <option value="24">Spider</option>
-                        <option value="25">Teleporter</option>
-
-                        <option value="26">Assault Rifle Viper</option>
-                        <option value="27">Assault Rifle Hound</option>
-                        <option value="28">Assault Rifle Asteroid</option>
-                        <option value="29">Assault Rifle Meteora</option>
-                        <option value="30">Assault Rifle Gimlet</option>
-                        <option value="31">Assault Rifle Salamander</option>
-                        <option value="32">Assault Rifle Tomahawk</option>
-
-                        <option value="33">Grenade Launcher Viper</option>
-                        <option value="34">Grenade Launcher Hound</option>
-                        <option value="35">Grenade Launcher Asteroid</option>
-                        <option value="36">Grenade Launcher Meteora</option>
-                        <option value="37">Grenade Launcher Gimlet</option>
-                        <option value="38">Grenade Launcher Salamander</option>
-                        <option value="39">Grenade Launcher Tomahawk</option>
-
-                        <option value="40">Shotgun Viper</option>
-                        <option value="41">Shotgun Hound</option>
-                        <option value="42">Shotgun Asteroid</option>
-                        <option value="43">Shotgun Meteora</option>
-                        <option value="44">Shotgun Gimlet</option>
-                        <option value="45">Shotgun Salamander</option>
-                        <option value="46">Shotgun Tomahawk</option>
-
-                        <option value="47">Handgun Viper</option>
-                        <option value="48">Handgun Hound</option>
-                        <option value="49">Handgun Asteroid</option>
-                        <option value="50">Handgun Meteora</option>
-                        <option value="51">Handgun Gimlet</option>
-                        <option value="52">Handgun Salamander</option>
-                        <option value="53">Handgun Tomahawk</option>
-
-                        <option value="54">Switchbox</option>
-                        <option value="56">Idaten/Skanda</option>
-                        <option value="57">Geist</option>
-                        <option value="58">Connector</option>
-                        <option value="59">Sougetsu</option>
-                        <option value="60">Full Arms</option>
-                    </select>
-                </td>
                 <td>
                     <select id="sub2">
                         <option value="0">Free Trigger</option>
@@ -419,10 +350,8 @@
                         <option value="60">Full Arms</option>
                     </select>
                 </td>
-            </tr>
-            <tr>
                 <td>
-                    <select id="main3">
+                    <select id="main2">
                         <option value="0">Free Trigger</option>
                         <option value="1">Shield</option>
                         <option value="2">Bagworm</option>
@@ -490,6 +419,8 @@
                         <option value="60">Full Arms</option>
                     </select>
                 </td>
+            </tr>
+            <tr>
                 <td>
                     <select id="sub3">
                         <option value="0">Free Trigger</option>
@@ -559,10 +490,79 @@
                         <option value="60">Full Arms</option>
                     </select>
                 </td>
+                <td>
+                    <select id="main3">
+                        <option value="0">Free Trigger</option>
+                        <option value="1">Shield</option>
+                        <option value="2">Bagworm</option>
+                        <option value="3">Raygust</option>
+                        <option value="4">Kogetsu</option>
+                        <option value="5">Scorpion</option>
+                        <option value="6">Kogetsu: Spear</option>
+                        <option value="7">Asteroid</option>
+                        <option value="8">Hound</option>
+                        <option value="9">Meteora</option>
+                        <option value="10">Viper</option>
+                        <option value="11">Egret</option>
+                        <option value="12">Ibis</option>
+                        <option value="13">Lightning</option>
+                        <option value="14">Gen'Yo</option>
+                        <option value="15">Lead Bullet</option>
+                        <option value="16">Senku</option>
+                        <option value="17">Starmaker</option>
+                        <option value="18">Thruster</option>
+                        <option value="19">Escudo</option>
+                        <option value="20">Chameleon</option>
+                        <option value="21">Dummy Beacon</option>
+                        <option value="22">Grasshopper</option>
+                        <option value="23">Silencer</option>
+                        <option value="24">Spider</option>
+                        <option value="25">Teleporter</option>
+
+                        <option value="26">Assault Rifle Viper</option>
+                        <option value="27">Assault Rifle Hound</option>
+                        <option value="28">Assault Rifle Asteroid</option>
+                        <option value="29">Assault Rifle Meteora</option>
+                        <option value="30">Assault Rifle Gimlet</option>
+                        <option value="31">Assault Rifle Salamander</option>
+                        <option value="32">Assault Rifle Tomahawk</option>
+
+                        <option value="33">Grenade Launcher Viper</option>
+                        <option value="34">Grenade Launcher Hound</option>
+                        <option value="35">Grenade Launcher Asteroid</option>
+                        <option value="36">Grenade Launcher Meteora</option>
+                        <option value="37">Grenade Launcher Gimlet</option>
+                        <option value="38">Grenade Launcher Salamander</option>
+                        <option value="39">Grenade Launcher Tomahawk</option>
+
+                        <option value="40">Shotgun Viper</option>
+                        <option value="41">Shotgun Hound</option>
+                        <option value="42">Shotgun Asteroid</option>
+                        <option value="43">Shotgun Meteora</option>
+                        <option value="44">Shotgun Gimlet</option>
+                        <option value="45">Shotgun Salamander</option>
+                        <option value="46">Shotgun Tomahawk</option>
+
+                        <option value="47">Handgun Viper</option>
+                        <option value="48">Handgun Hound</option>
+                        <option value="49">Handgun Asteroid</option>
+                        <option value="50">Handgun Meteora</option>
+                        <option value="51">Handgun Gimlet</option>
+                        <option value="52">Handgun Salamander</option>
+                        <option value="53">Handgun Tomahawk</option>
+
+                        <option value="54">Switchbox</option>
+                        <option value="56">Idaten/Skanda</option>
+                        <option value="57">Geist</option>
+                        <option value="58">Connector</option>
+                        <option value="59">Sougetsu</option>
+                        <option value="60">Full Arms</option>
+                    </select>
+                </td>
             </tr>
             <tr>
                 <td>
-                    <select id="main4">
+                    <select id="sub4">
                         <option value="0">Free Trigger</option>
                         <option value="1">Shield</option>
                         <option value="2">Bagworm</option>
@@ -631,7 +631,7 @@
                     </select>
                 </td>
                 <td>
-                    <select id="sub4">
+                    <select id="main4">
                         <option value="0">Free Trigger</option>
                         <option value="1">Shield</option>
                         <option value="2">Bagworm</option>
