--- a/jssand/index.html
+++ b/jssand/index.html
@@ -5,7 +5,7 @@
 		<link rel="stylesheet" type="text/css" href="styles.css">
 	</head>
 	<body>
-		<canvas id="canvas" width="2000" height="1400" style="border:1px solid white;text-align: center;"></canvas>
+		<canvas id="canvas" width="500" height="700" style="border:1px solid white;" align="center"></canvas>
 		<div id="elements">
 			<button onclick="setElement(0)">Za Hando</button>
 			<br />
@@ -20,8 +20,6 @@
 			<button onclick="setElement(5)">Tree</button>
 			<br />
 			<button onclick="setElement(7)">Wood</button>
-			<br />
-			<label>Speed: </label><input type="number" value="50" id="speedInput"/>
 		</div>
 	</body>
 	<script src="scripts.js"></script>
